--- a/Notes app/UI/Base.lproj/Main.storyboard
+++ b/Notes app/UI/Base.lproj/Main.storyboard
@@ -137,6 +137,9 @@
                             </textField>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ePw-ip-mo1">
                                 <rect key="frame" x="16" y="513" width="382" height="295"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="382" id="wHc-4C-3ra"/>
                                     <constraint firstAttribute="height" constant="295" id="x7C-4g-1en"/>
@@ -221,6 +224,9 @@
                                         <constraint firstAttribute="trailing" secondItem="INk-rW-8QC" secondAttribute="trailing" constant="16" id="scC-iE-qco"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <accessibility key="accessibilityConfiguration">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                                 <connections>
                                     <outlet property="NoteTextLabel" destination="CLn-o8-GA0" id="6oY-77-S7y"/>
                                     <outlet property="TimestampLabel" destination="1ve-bW-4Z7" id="Wrt-us-vgk"/>
@@ -297,9 +303,15 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fdg-bz-kH1">
                                                     <rect key="frame" x="6" y="6" width="100" height="100"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <accessibility key="accessibilityConfiguration">
+                                                        <bool key="isElement" value="YES"/>
+                                                    </accessibility>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <accessibility key="accessibilityConfiguration">
+                                                <bool key="isElement" value="YES"/>
+                                            </accessibility>
                                         </view>
                                     </subviews>
                                     <constraints>
@@ -325,6 +337,9 @@
                                         <constraint firstItem="s2t-6S-UoZ" firstAttribute="leading" secondItem="NUt-Wg-BPA" secondAttribute="trailing" constant="26" id="xID-Yd-v7h"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <accessibility key="accessibilityConfiguration">
+                                    <bool key="isElement" value="YES"/>
+                                </accessibility>
                                 <connections>
                                     <outlet property="DateLabel" destination="4PU-C5-K5q" id="Py4-UP-G5n"/>
                                     <outlet property="HumidityLabel" destination="u8f-TK-e3x" id="LvR-ue-ga3"/>
